--- a/package.json
+++ b/package.json
@@ -13,13 +13,27 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.3",
     "next": "13.4.16",
+    "next-cookies": "^2.0.3",
+    "nodemailer": "^6.9.4",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-toastify": "^9.1.3",
+    "sweetalert2": "^11.7.23",
     "tailwindcss": "3.3.3",
+    "toast": "^0.5.4",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
